--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,34 @@
+.theme-light {
+  --color-primary: #fff;
+  --text-primary: #0e0e0e;
+  
+  --color-secondary: #ddd;
+  --color-tertiary: #eee;
+  
+  --color-accent: #2e2e2e;
+  --text-accent: #eee; 
+}
+
+.theme-dark {
+  --color-primary: #333;
+  --text-primary: #eee ;
+  
+  --color-secondary: #444;
+  --color-tertiary: #555;
+  
+  --color-accent: #eee;
+  --text-accent: #111;
+}
 .App {
   text-align: center;
   padding: 2rem;
+  background-color: var(--color-primary)
 }
 
 html {
   font-size: 16px;
+}
+
+
+body {
 }
