added text display with error recognition and highlight

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@
 .App {
   text-align: center;
   padding: 2rem;
-  background-color: var(--color-primary)
+  background-color: var(--color-primary);
+  height: 100vh;
 }
 
 html {
