--- a/src/Components/TextDisplay/TextDisplay.css
+++ b/src/Components/TextDisplay/TextDisplay.css
@@ -1,9 +1,14 @@
-textarea {
+/* textarea { */
+.textDisplay {
+  display: block;
   width: 80%;
   max-width: 55em;
   height: 15vh;
   min-height: 10rem;
+  margin: 0 auto;
   resize: none;
+  overflow: hidden;
+  overflow-wrap: anywhere;
   background-color: var(--color-primary);
   color: var(--text-primary);
   border: 1px solid var(--color-secondary);
@@ -11,5 +16,15 @@ textarea {
 
   padding: 1rem;
 
-  font-size: 2rem;
+  font-size: 1.5rem;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.currentChar {
+  background-color: var(--text-background-highlight);
+  color: var(--text-color-highlight);
+}
+
+.errorChar {
+  color: #ff6666;
 }
