--- a/src/Components/FormattedText/FormattedText.css
+++ b/src/Components/FormattedText/FormattedText.css
@@ -6,7 +6,7 @@
   color: var(--text-primary)
 }
 
-.currentChar {
+.cursor {
   animation-name: cursor-blink;
   animation-duration: 750ms;
   animation-iteration-count: infinite;
