--- a/src/Components/Toolbar/Toolbar.css
+++ b/src/Components/Toolbar/Toolbar.css
@@ -1,5 +1,7 @@
 .toolbar {
   height: 2rem;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  align-items: center;
+  margin: 0.5rem 0;
 }
